[gd_scene load_steps=2 format=3 uid="uid://dsvf6bnddtlcu"]

[ext_resource type="Script" path="res://Login.gd" id="1_poqjf"]

[node name="Login" type="Node"]
script = ExtResource("1_poqjf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 405.0
offset_top = 226.0
offset_right = -413.0
offset_bottom = -225.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
offset_right = 334.0
offset_bottom = 278.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
offset_left = 15.0
offset_top = 15.0
offset_right = 319.0
offset_bottom = 263.0
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 304.0
offset_bottom = 26.0
text = "Please enter credentials:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SIGNUP" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 41.0
offset_right = 304.0
offset_bottom = 72.0
text = "																																		SIGNUP
"

[node name="LOGIN" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 87.0
offset_right = 304.0
offset_bottom = 118.0
text = "LOGIN
"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 133.0
offset_right = 304.0
offset_bottom = 164.0
placeholder_text = "EMAIL"
alignment = 1

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 179.0
offset_right = 304.0
offset_bottom = 210.0
placeholder_text = "PASSWORD"
alignment = 1

[node name="Error" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 225.0
offset_right = 304.0
offset_bottom = 248.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/SIGNUP" to="." method="_on_signup_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/LOGIN" to="." method="_on_login_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
